Change contact email in index.html
Updated contact email in privacy policy.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   <section>
     <h2>7. Contato</h2>
     <p>Para dúvidas sobre esta política de privacidade ou sobre o app, entre em contato:</p>
-    <p><a href="mailto:jhum.dp@gmail.com">jhum.dp@gmail.com</a></p>
+    <p><a href="mailto:jhum.dp@gmail.com">junior.dp.dev@gmail.com</a></p>
   </section>
 </body>
 </html>
+
